# claudear

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  build.rs  claudear.example.toml  claudear.example.yaml  deny.toml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  homepage-design-1.html  homepage-design-2.html  homepage-design-3.html
.cargo/: config.toml
.github/: dependabot.yml
.github/formula/: claudear.rb.template
.github/workflows/: ci.yml  e2e-prod-smoke.yml  e2e.yml  release.yml  security.yml  website.yml
crates/claudear-analysis/: Cargo.toml
crates/claudear-analysis/src/: lib.rs  llm.rs  qa.rs
crates/claudear-analysis/src/evaluation/: detector.rs  runner.rs  types.rs
crates/claudear-analysis/src/evaluation/parsers/: c_cpp.rs  cargo.rs  dotnet.rs  generic.rs  go.rs  kotlin.rs  mod.rs  php.rs  ruby.rs  swift.rs
crates/claudear-analysis/src/feedback/: analyzer.rs  embeddings.rs  issue_embeddings.rs  mod.rs  outcomes.rs
crates/claudear-analysis/src/inference/: context.rs  mod.rs
crates/claudear-analysis/src/knowledgebase/: mod.rs
crates/claudear-analysis/src/knowledgebase/discord/: mod.rs
crates/claudear-analysis/src/learning/: cluster_detector.rs  cross_repo_correlator.rs  diff_analysis.rs  log_extractor.rs  qa_promoter.rs  quality_scorer.rs  repo_knowledge.rs  review_classifier.rs  strategy_parser.rs
crates/claudear-analysis/src/prioritisation/: blast_radius.rs  content_cluster.rs  mod.rs  scorer.rs  suppression.rs
crates/claudear-analysis/src/regression/: linear.rs  monitor.rs  scheduler.rs  sentry.rs
crates/claudear-analysis/src/release/: github.rs  tracker.rs
crates/claudear-analysis/src/repo/: discovery.rs  git.rs  index.rs  mod.rs  relationships.rs
crates/claudear-analysis/src/repo/code_index/: analyzer.rs  chunker.rs  complexity.rs  languages.rs  mod.rs  parser.rs  types.rs
crates/claudear-config/: Cargo.toml
crates/claudear-config/src/: config.rs  env_writer.rs  lib.rs  users.rs
crates/claudear-core/: Cargo.toml
crates/claudear-core/src/: http.rs  lib.rs  types.rs
crates/claudear-core/src/templates/: loader.rs  mod.rs  renderer.rs
crates/claudear-e2e/: Cargo.toml
crates/claudear-e2e/src/: ask.rs  cleanup.rs  config.rs  daemon.rs  main.rs
crates/claudear-e2e/src/scenarios/: mod.rs  s2_ask.rs  s3_cascade.rs  s4_action.rs
crates/claudear-engine/: Cargo.toml
crates/claudear-engine/src/: agent_classifier.rs  api_events.rs  discord_index.rs  housekeeping.rs  intent.rs  lib.rs  llm_agent_runner.rs  llm_analyzer.rs  llm_classifier.rs  processing.rs  repo_index.rs  retry.rs  watcher.rs
crates/claudear-engine/src/api/: auth.rs  embedded.rs  mod.rs  routes.rs  security.rs
crates/claudear-engine/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs  transport.rs
crates/claudear-integrations/: Cargo.toml
crates/claudear-integrations/src/: ask_reply_inbox.rs  github.rs  gitlab.rs  lib.rs  scm.rs  telemetry.rs  tls.rs
crates/claudear-integrations/src/chat/: llm.rs  routes.rs  service.rs  types.rs
crates/claudear-integrations/src/chat/models/: mod.rs
crates/claudear-integrations/src/discord/: client.rs  mod.rs  thread_manager.rs  types.rs
crates/claudear-integrations/src/github_app/: auth.rs  client.rs  routes.rs
crates/claudear-integrations/src/notifier/: ask_orchestrator.rs  console.rs  discord.rs  email.rs  mod.rs  push.rs  slack.rs  sms.rs  telegram.rs  whatsapp.rs
crates/claudear-integrations/src/port_forward/: linux.rs  macos.rs  mod.rs
crates/claudear-integrations/src/reports/: generator.rs  mod.rs  scheduler.rs
crates/claudear-integrations/src/runner/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  orchestrator.rs
crates/claudear-integrations/src/source/: discord.rs  github.rs  gitlab.rs  helpscout.rs  jira.rs  linear.rs  mod.rs  sentry.rs  slack.rs  telegram.rs  whatsapp.rs
crates/claudear-integrations/src/webhook/: configurator.rs  github.rs  gitlab.rs  helpscout.rs  jira.rs  linear.rs  linear_api.rs  mod.rs  sentry.rs  sentry_api.rs  slack.rs  telegram.rs  whatsapp.rs
crates/claudear-storage/: Cargo.toml
crates/claudear-storage/src/: analytics.rs  lib.rs  migrator.rs  sqlite.rs  tenant.rs  types.rs  vectorlite.rs
dashboard/: Dockerfile  Dockerfile.dev  build.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/docker/: nginx.conf
dashboard/src/: App.tsx  index.css  main.tsx  router.tsx
dashboard/test/: api-more.test.ts  api.test.ts  auth-provider.test.tsx  auth.test.ts  card.test.tsx  chat-api.test.ts  chat-hook.test.tsx  chat-input.test.tsx  chat-message.test.tsx  chat-sessions.test.tsx  data-table.test.tsx  experiments-admin.test.tsx  health-bar.test.tsx  inference-page.interactions.test.tsx  learning-page.test.tsx  modal.test.tsx  model-status.test.tsx  new-api.test.ts  overview.test.tsx  page-skeletons.test.tsx  pages.test.tsx  repos-interactions.test.tsx  route-prefetch.test.ts  router.test.tsx  sentry.test.ts  setup.ts  sidebar.test.tsx  utils.test.ts
docs/plans/: 2026-02-13-multi-repo-cascade-design.md  2026-02-13-multi-repo-cascade-plan.md  2026-02-14-dashboard-auth-design.md  2026-02-14-dashboard-auth-plan.md  2026-02-14-instructions-file-design.md  2026-02-14-instructions-file-plan.md
migrations/: V1__initial_schema.sql  V2__add_session_last_active.sql  V3__action_runs.sql  V4__support_reply_ratings.sql  V5__issue_recurrence.sql  V5__support_discord_knowledgebase.sql  V6__support_discord_knowledgebase.sql  V7__retrieval_usage.sql
scripts/: prod-e2e-smoke.sh  seed-demo.sql
scripts/docs/: generate-docs.ts  package.json
scripts/screenshots/: mock-data.ts  package.json  take-screenshots.ts
src/: ask_reply_inbox.rs  config.rs  env_writer.rs  error.rs  github.rs  gitlab.rs  housekeeping.rs  http.rs  lib.rs  main.rs  platform.rs  postgres.rs  processing.rs  qa.rs  retry.rs  runner.rs  scm.rs  secret.rs  telemetry.rs  testutil.rs  tls.rs  types.rs  users.rs  watcher.rs
src/api/: auth.rs  (+3 more)
tests/: e2e_real_repo.rs
website/: docs.html  index.html
(+197 files in other folders)
