[package]
name = "claudear"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "claudear"
path = "src/main.rs"

[lib]
name = "claudear"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process", "signal"] }

# HTTP server & client
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.13", features = ["json", "form"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "limit"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "load_extension"] }

# Embeddings
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls"] }

# ORT runtime (download binaries with rustls instead of native-tls)
ort = { version = "=2.0.0-rc.11", features = ["download-binaries", "tls-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Configuration
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
rand = "0.10"

# JWT for GitHub App authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# GraphQL for Linear
graphql_client = { version = "0.16", features = ["reqwest-rustls"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# Regex
regex-lite = "0.1"

# File system utilities
walkdir = "2"
dirs = "6"

# URL encoding
urlencoding = "2"

# Base64 encoding
base64 = "0.22"

# Semantic versioning
semver = "1"

# Embedded dashboard
rust-embed = "8.5"
mime_guess = "2.0"

# Authentication
bcrypt = "0.18"
tower-cookies = "0.11"

# Email (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
imap = "2.4"
native-tls = "0.2"
mailparse = "0.16"

# Process checking on Unix
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
mockall = "0.14"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "Claudear Contributors"
copyright = "2025"
license-file = ["LICENSE", "0"]
extended-description = """\
A high-performance unified watcher service that monitors issue trackers \
(Linear, Sentry) and automatically spawns Claude Code agents to fix \
issues and create pull requests."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/claudear", "usr/bin/", "755"],
]
