[package]
name = "claudear"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "claudear"
path = "src/main.rs"
required-features = ["sqlite"]

[[bin]]
name = "claudear-e2e"
path = "src/bin/e2e/main.rs"
required-features = ["sqlite"]

[lib]
name = "claudear"
path = "src/lib.rs"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process", "signal"] }

# HTTP server & client
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
reqwest = { version = "0.13", features = ["json", "form", "stream"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "limit"] }

# TLS auto-provisioning (Let's Encrypt ACME)
rustls-acme = { version = "0.15", features = ["axum", "aws-lc-rs"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "load_extension"], optional = true }

# Embeddings
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls"] }

# ORT runtime (download binaries with rustls instead of native-tls)
ort = { version = "=2.0.0-rc.11", features = ["download-binaries", "tls-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"

# Configuration
toml = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error monitoring
sentry = { version = "0.46", features = ["tower-axum-matched-path", "tracing", "rustls", "backtrace", "contexts", "debug-images", "panic", "anyhow", "reqwest"], default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto for webhook signatures and config encryption
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
zeroize = "1"
rand = "0.10"

# JWT for GitHub App authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# GraphQL for Linear
graphql_client = { version = "0.16", features = ["reqwest-rustls"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# Regex
regex-lite = "0.1"

# Tree-sitter code parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-c-sharp = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-lua = "0.4"

# Local LLM inference (llama.cpp bindings)
llama-cpp-2 = "0.1"
encoding_rs = "0.8"

# System info (memory detection for batch sizing)
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

# Parallel iteration
rayon = "1"

# File system utilities
walkdir = "2"
dirs = "6"

# URL encoding/parsing
urlencoding = "2"
url = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Base64 encoding
base64 = "0.22"

# Semantic versioning
semver = "1"

# Embedded dashboard
rust-embed = "8.5"
mime_guess = "2.0"

# Authentication
bcrypt = "0.18"
tower-cookies = "0.11"

# Email (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
imap = "2.4"
native-tls = "0.2"
mailparse = "0.16"

# Vendor OpenSSL for Linux cross-compilation (native-tls uses openssl-sys on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# Process checking and IPC on Unix
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# tempfile is used by both dev tests and the claudear-e2e binary
[dependencies.tempfile]
version = "3"

[dev-dependencies]
mockall = "0.14"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "Claudear Contributors"
copyright = "2025"
license-file = ["LICENSE", "0"]
extended-description = """\
A high-performance unified watcher service that monitors issue trackers \
(Linear, Sentry) and automatically spawns Claude Code agents to fix \
issues and create pull requests."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/claudear", "usr/bin/", "755"],
]
