[package]
name = "claudear-core"
version = "1.0.0"
edition = "2021"

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }

# Regex
regex-lite = { workspace = true }

# Misc
uuid = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }

# Database (optional, just for From<rusqlite::Error>)
rusqlite = { workspace = true, optional = true }

# Process checking and IPC on Unix
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Process checking on Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
