[package]
name = "claudear-integrations"
version = "1.0.0"
edition = "2021"

[features]
default = []
sqlite = ["claudear-core/sqlite", "claudear-storage/sqlite", "claudear-analysis/sqlite"]

[dependencies]
claudear-core = { workspace = true }
claudear-config = { workspace = true }
claudear-storage = { workspace = true }
claudear-analysis = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# HTTP server & client
axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }

# TLS auto-provisioning
rustls-acme = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error monitoring
sentry = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Crypto
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# JWT for GitHub App authentication
jsonwebtoken = { workspace = true }

# Base64
base64 = { workspace = true }

# GraphQL for Linear
graphql_client = { workspace = true }

# Async utilities
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# UUID
uuid = { workspace = true }

# URL
url = { workspace = true }
urlencoding = { workspace = true }

# Regex
regex-lite = { workspace = true }

# Email (SMTP)
lettre = { workspace = true }
imap = { workspace = true }
native-tls = { workspace = true }
mailparse = { workspace = true }

# Local LLM inference
llama-cpp-2 = { workspace = true }
encoding_rs = { workspace = true }

# HTTP server
axum-server = { workspace = true }

# Misc
dirs = { workspace = true }
semver = { workspace = true }

# Vendor OpenSSL for Linux cross-compilation
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
